--- a/docker-compose-rancher.yml
+++ b/docker-compose-rancher.yml
@@ -11,31 +11,21 @@ services:
       MYSQL_USER: drupaluser
       WEB_GROUP: www-data
       WEB_USER: www-data
-    stdin_open: true
     volumes:
     - /home/randall/volumes/d8-staff/private:/var/www/html/private
     - /home/randall/volumes/d8-staff/files:/var/www/html/web/sites/default/files
-    tty: true
-    labels:
-      io.rancher.container.pull_image: always
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:4.7
     environment:
       PMA_HOST: db
-    stdin_open: true
-    tty: true
   db-backup:
     image: libapps-admin.uncw.edu:8000/randall-dev/test-sidekick
     environment:
       DB_HOST: db
       DB_NAMES: db
       ROOT_PASSWORD: CHANGEME
-    stdin_open: true
     volumes:
     - /home/randall/volumes/backups/Backups/d8-staff:/backups
-    tty: true
-    labels:
-      io.rancher.container.pull_image: always
   db:
     image: mysql:8.0.16
     environment:
@@ -43,12 +33,8 @@ services:
       MYSQL_ROOT_PASSWORD: CHANGEME
       MYSQL_USER: drupaluser
       TZ: America/New_York
-    stdin_open: true
     volumes:
     - /home/randall/volumes/d8-staff/mysql:/var/lib/mysql
-    tty: true
+    - /home/randall/volumes/d8-staff/db_autoimport:/docker-entrypoint-initdb.d/
     command:
     - --default-authentication-plugin=mysql_native_password
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.sidekicks: db-backup
