--- a/drupal8docker/sync/staff_subtheme.settings.yml
+++ b/drupal8docker/sync/staff_subtheme.settings.yml
@@ -101,3 +101,5 @@ bootstrap_barrio_google_fonts: open_sans
 bootstrap_barrio_bootstrap_icons: 0
 bootstrap_barrio_icons: ''
 bootstrap_barrio_table_head: ''
+bootstrap_barrio_hide_node_label: 0
+bootstrap_barrio_navbar_offcanvas: ''
