--- a/drupal8docker/sync/webform.webform.digital_scholarship_librarian_ca.yml
+++ b/drupal8docker/sync/webform.webform.digital_scholarship_librarian_ca.yml
@@ -1,67 +1,80 @@
-uuid: 6266959e-53a1-4ead-a067-c7be6c1c5bd5
+uuid: 6c0d8e5b-5f89-4696-868d-d2d83b2112dd
 langcode: en
-status: open
+status: closed
 dependencies: {  }
 weight: 0
 open: null
 close: null
-uid: 13
+uid: 17
 template: false
 archive: false
-id: cataloging_and_metadata_libraria
-title: 'Cataloging and Metadata Librarian'
-description: ''
+id: digital_scholarship_librarian_ca
+title: 'Digital Scholarship Librarian Candidate Feedback '
+description: "<br />\r\n&nbsp;"
 category: ''
 elements: |-
-  first_select_the_candidate_then_complete_the_form_for_each_selec:
+  which_candidate_are_you_ranking_:
     '#type': select
-    '#title': 'Select the candidate:'
+    '#title': 'Which candidate are you ranking?'
     '#options':
-      'Kim Cull': 'Kim Cull'
-      'Emma Beck': 'Emma Beck'
-      'Emma May': 'Emma May'
-      'Jan Juliani': 'Jan Juliani'
+      'Misha  Coleman': 'Misha  Coleman'
+      'John Knox': 'John Knox'
+      'Katharine Teykl': 'Katharine Teykl'
     '#required': true
-  how_would_you_rate_the_candidate_s_presentation_:
+  the_quality_of_the_candidate_s_presentation_:
     '#type': webform_rating
-    '#title': 'How would you rate the candidate''s presentation?'
-  how_would_you_rate_the_candidates_ability_to_perform_cataloging_:
+    '#title': 'The quality of the candidate''s presentation.'
+    '#required': true
+  comments:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  the_candidate_s_knowledge_of_tools_methods_and_practices_used_by:
     '#type': webform_rating
-    '#title': 'How would you rate the candidates ability to perform cataloging and description of complex materials in a variety of formats.'
-  did_the_candidate_answer_all_questions_to_your_satisfaction_:
+    '#title': 'The candidate''s knowledge of tools, methods, and practices used by faculty, researchers, students, librarians, and other partners engaged with digital scholarship.'
+    '#required': true
+  knowledge_comments:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  the_candidate_s_abilities_to_collaborate_and_consult_with_facult:
+    '#type': webform_rating
+    '#title': 'The candidate’s abilities to collaborate and consult with faculty and staff across the campus, as well as within the Library, on the development of a network of digital scholarship services, programs, and support.'
+    '#required': true
+  abilities_comments:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  strength_comments:
+    '#type': textarea
+    '#title': 'What would you consider to be this candidate’s strengths and areas for improvement?'
+    '#required': true
+  did_the_candidate_answer_all_questions_to_your_satisfaction_if_n:
     '#type': select
-    '#title': 'Did the candidate answer all questions to your satisfaction? If no, why?'
+    '#title': 'Did the candidate answer all questions to your satisfaction? If not, which questions were left unanswered?'
     '#options':
-      'Yes': 'Yes'
       'No': 'No'
-  comments_:
+      'Yes': 'Yes'
+    '#required': true
+  comment:
     '#type': textarea
-    '#title': 'Comments:'
-  do_you_believe_the_candidate_has_the_ability_to_perform_all_duti:
+    '#title': Comment
+    '#required': true
+  do_you_have_any_reservations_about_this_candidate_s_ability_to_s:
     '#type': select
-    '#title': 'Do you believe the candidate has the ability to perform all duties required of the position?'
-    '#options': yes_no
-  comments1:
-    '#type': textarea
-    '#title': 'Comments:'
-  succeed:
-    '#type': select
-    '#title': 'Do you feel the candidate can succeed as a faculty member at Randall Library?'
-    '#options': yes_no
-  comments2:
-    '#type': textarea
-    '#title': 'Comments:'
-  how_would_you_rank_the_candidate_compared_to_the_other_candidate:
-    '#type': select
-    '#title': 'How would you rank the candidate compared to the other candidates?'
+    '#title': 'Do you have any reservations about this candidate’s ability to succeed at UNCW? If yes, please explain.             '
     '#options':
-      First: First
-      Second: Second
-      Third: Third
-      Fourth: Fourth
-  additional_comments_:
+      'No': 'No'
+      'Yes': 'Yes'
+    '#required': true
+  reservations_comment:
     '#type': textarea
-    '#title': 'Additional Comments:'
+    '#title': Comment
+    '#required': true
+  additional_comments:
+    '#type': textarea
+    '#title': 'Additional comments'
+    '#required': true
 css: ''
 javascript: ''
 settings:
@@ -71,12 +84,12 @@ settings:
   ajax_effect: ''
   ajax_speed: null
   page: true
-  page_submit_path: ''
+  page_submit_path: /digital_scholarship_librarian_candidate_feedback_form
   page_confirm_path: ''
   page_theme_name: ''
-  form_title: both
+  form_title: source_entity_webform
   form_submit_once: false
-  form_open_message: ''
+  form_open_message: "<span style=\"font-size:11.0pt\"><span style=\"line-height:107%\"><span style=\"font-family:&quot;Calibri&quot;,sans-serif\">Based on the candidate&rsquo;s cover letter, resume, and interview, please provide feedback about the candidate based on the following criteria. Please provide comments supporting each rating.<br />\r\n<br />\r\nIf you want to be able to save a draft of this form and complete it at a later time, please use the <strong>Save Draft</strong> button below.</span></span></span><br />\r\n<br />\r\n<br />\r\n&nbsp;"
   form_close_message: ''
   form_exception_message: ''
   form_previous_submissions: true
@@ -146,7 +159,7 @@ settings:
   wizard_track: ''
   wizard_prev_button_label: ''
   wizard_next_button_label: ''
-  wizard_toggle: false
+  wizard_toggle: true
   wizard_toggle_show_label: ''
   wizard_toggle_hide_label: ''
   preview: 0
@@ -157,9 +170,9 @@ settings:
   preview_excluded_elements: {  }
   preview_exclude_empty: true
   preview_exclude_empty_checkbox: false
-  draft: none
+  draft: all
   draft_multiple: false
-  draft_auto_save: false
+  draft_auto_save: true
   draft_saved_message: ''
   draft_loaded_message: ''
   draft_pending_single_message: ''
