--- a/drupal8docker/sync/pathauto.pattern.generic_content.yml
+++ b/drupal8docker/sync/pathauto.pattern.generic_content.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: '[node:title]'
 selection_criteria:
   74e42e34-d0b6-454b-aaec-687704a026ab:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: 74e42e34-d0b6-454b-aaec-687704a026ab
     context_mapping:
